docs(perf): record the ZGC collector cell and the throughput ceiling
Build 446 settles unit 17's decisive question. It was a single-variable cell -
same image revision as 445, same cpusets, same default 1,230 MiB heap, with
PERF_SERVER_JAVA_OPTS set to exactly -XX:+UseZGC - and ZGC beat G1 at every
rung, from 22x better p95 at 24,000 to 2.0x at 48,000, while slightly raising
peak throughput.

That does not by itself justify flipping the shipped default. ZGC does not
collect less: gc_seconds_delta over the same growth phase is 0.35 s under G1
against 5.135 s under ZGC, with peak CPU 33% against 68%. It buys latency with
CPU. The advantage also narrows at the top of the ladder; that narrowing is
consistent with concurrent collection contending for the same six pinned cores,
but the artifacts carry only aggregate CPU, so it is recorded as an inference
rather than a measured mechanism. Since users routinely run the container with
1-2 CPUs, the gating experiment is a low-core cell under both collectors.

Build 447 answers the throughput question at shipped defaults, baseline
eligible with all six validity checks green: 49,943 served at 52,000 offered
and 55,725 at 60,000, peaking at 58,351, with zero errors at every rung and p95
plateauing near 35 ms rather than running away. All six rungs are rig-valid
because VU occupancy of 82-93% exceeds the knee threshold, so the dropped
iterations are the server saturating rather than the client failing to schedule.

Two limits are recorded with it: the ladder is all knee rungs with no sub-knee
anchor, and its two lowest rungs read below 445's because it starts cold at
44,000 where 445 climbed through eight rungs first - so 445 remains the
publishable curve and 447 is the ceiling evidence above it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014PMKZ4SKgnGbZZ3FauHciu